# Planet_Earthing

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOW_TO_WORK.md  LICENSE  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: evidence_claim.md  research_task.md
.github/workflows/: ci.yml  link-check.yml  protocol-packet.yml  validate.yml
data/examples/synthetic_pet_the_plant/: README.md  feature_table.csv  (+1 more)
docs/governance/: claim-ladder.md  decisions.md  living-repo.md  maintainer-guide.md  project-plan.md
docs/protocols/: consent-and-privacy-packet.md  data-management-plan.md  experimental-protocol.md  phase-0-instrumentation-validation.md  pilot-readiness-checklist.md  preregistration.md  randomization-plan.md  replication-plan.md  risk-register.md  sensor-suite.md  statistical-analysis-plan.md
docs/research/: evidence-ledger.json  evidence-summary.md  fact-check.md  literature-map.md  source-register.bib
docs/specs/: calibration-report-template.md  data-dictionary.md  hardware-bom.md  session-checklist.md  species-selection.md
experiments/pet-the-plant/: README.md  analysis_config.json  problem-statement.md  randomization_schedule_example.csv  session_template.json
scripts/: build_feature_table.py  generate_randomization_schedule.py  generate_synthetic_dataset.py  validate_repo.py
src/planetearthing/: __init__.py  cli.py  features.py  randomization.py  schema.py
tests/: test_features.py  test_randomization.py  test_schema.py
(+16 files in other folders)
