[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "planetearthing"
version = "0.1.0"
description = "Living research helpers for the PlanetEarthing Pet the Plant experiment."
requires-python = ">=3.10"
authors = [{ name = "PlanetEarthing contributors" }]
dependencies = []

[project.scripts]
planetearthing = "planetearthing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

